Estilização do form de login 2

--- a/src/components/login/Login.module.css
+++ b/src/components/login/Login.module.css
@@ -6,7 +6,7 @@
   align-items: center;
 }
 
-.LoginForm {
-  width: 200px;
-  height: 200px;
+.LoginForm .LoginForm__inputContainer {
+  width: 300px;
+  margin-bottom: 12px;
 }
