--- a/src/components/shared/input/StandardInput.module.css
+++ b/src/components/shared/input/StandardInput.module.css
@@ -7,6 +7,7 @@
   border: 2px gray solid;
   border-radius: 8px;
   height: 28px;
+  width: 100%;
   padding-left: 10px;
   box-sizing: border-box;
 }
